--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div id="pet-display-area" class="pet-display-area"></div>
 
     <footer class="credits">
-        Made with love by David Cheang <a href="https://twitter.com/dadnotehk" target="_blank">@dadnotehk</a>
+        Made with love by David Cheang <a href="https://www.instagram.com/dadnotehk" target="_blank">@dadnotehk</a>
     </footer>
 
     <script src="science_questions.js"></script>
